removing red text, final one or two typos/word changes suggested by sam

--- a/MCS_JINST/MCS_JINST_main.tex
+++ b/MCS_JINST/MCS_JINST_main.tex
@@ -275,13 +275,13 @@ The Booster Neutrino Beam (BNB) is composed predominantly of muon neutrinos ($\n
 
 \section{Multiple Coulomb scattering}
 
-Multiple Coulomb scattering occurs when a charged particle traverses a medium and undergoes electromagnetic scattering off atomic nuclei. This scattering perturbs the original trajectory of the particle within the material (figure \ref{mcs_nocap_fig}). For a given initial momentum $p$, the angular deflection scatters of a particle in either the $x'$ direction or $y'$ direction (as indicated in the aforementioned figure) \textcolor{red}{are modeled with a} Gaussian distribution centered at zero with an RMS width, $\sigma_o^{\text{HL}}$, given by the Highland formula \cite{highland,highland-lynch-dahl} 
+Multiple Coulomb scattering occurs when a charged particle traverses a medium and undergoes electromagnetic scattering off atomic nuclei. This scattering perturbs the original trajectory of the particle within the material (figure \ref{mcs_nocap_fig}). For a given initial momentum $p$, the angular deflection scatters of a particle in either the $x'$ direction or $y'$ direction (as indicated in the aforementioned figure) are modeled with a Gaussian distribution centered at zero with an RMS width, $\sigma_o^{\text{HL}}$, given by the Highland formula \cite{highland,highland-lynch-dahl} 
 
 \begin{equation}\label{highland_eqtn}
 	\sigma_o^{\text{HL}}=\frac{S_2}{p\beta c}z\sqrt{\frac{\ell}{X_0}}\left[1+\epsilon\times\ln\left(\frac{\ell}{X_0}\right)\right],
 \end{equation}
 
-\noindent where $\beta$ is the ratio of the particle's velocity to the speed of light (assuming the particle is a muon), $\ell$ is the distance traveled inside the material, $z$ is the magnitude of the charge of the particle (unity, for the case of muons), and $X_0$ is the radiation length of the target material (taken to be a constant $14$~cm in liquid argon). $S_2$ and $\epsilon$ are parameters determined to be 13.6 MeV and 0.038, respectively. \textcolor{red}{So called ``mixture models''~\cite{mixmodel1,mixmodel2} which model both the core and tails of scattering distributions are not used in this study, though their inclusion may potentially improve algorithm performance.} In this study, a modified version of the Highland formula is used that includes a detector-inherent angular resolution term, $\sigma_o^{\text{res}}$
+\noindent where $\beta$ is the ratio of the particle's velocity to the speed of light (assuming the particle is a muon), $\ell$ is the distance traveled inside the material, $z$ is the magnitude of the charge of the particle (unity, for the case of muons), and $X_0$ is the radiation length of the target material (taken to be a constant $14$~cm in liquid argon). $S_2$ and $\epsilon$ are parameters determined to be 13.6 MeV and 0.038, respectively. So called ``mixture models''~\cite{mixmodel1,mixmodel2} which model both the core and tails of scattering distributions are not used in this study, though their inclusion may potentially improve algorithm performance. In this study, a modified version of the Highland formula is used that includes a detector-inherent angular resolution term, $\sigma_o^{\text{res}}$
 \begin{equation}\label{modified_highland_eqtn}
 \sigma_{o} = \sqrt{ (\sigma_o^{\text{HL}})^2 + (\sigma_o^{\text{res}})^2}.% = \sqrt{ (\frac{13.6\  \text{MeV}}{p\beta c}z\sqrt{\frac{\ell}{X_0}}\Big[1+0.0038\text{ln}\Big(\frac{\ell}{X_0}\Big)\Big])^2 + (\sigma_o^{res})^2 }
 \end{equation}
@@ -317,7 +317,7 @@ In order to re-tune these parameters for liquid argon, a large sample of muons a
 	\sigma_o^{\text{HL}}=\frac{S_2}{p\beta c}.
 \end{equation}
 
-The $S_2$ parameter in equation \ref{highland_simplified} is fit for as a function of true muon momentum at each scatter, in order to explore the $\beta$ dependence of this parameter. \textcolor{red}{Note that to use a segment length other than $X_0$ a simultaneous fit both for $S_2$ and for $\epsilon$ is necessary, which is not described in this paper.} The fitted \textcolor{red}{$S_2$} parameter value as a function of true momentum is shown in figure \ref{retune_highland_fig1}.
+The $S_2$ parameter in equation \ref{highland_simplified} is fit for as a function of true muon momentum at each scatter, in order to explore the $\beta$ dependence of this parameter. Note that to use a segment length other than $X_0$ a simultaneous fit both for $S_2$ and for $\epsilon$ is necessary, which is not described in this paper. The fitted $S_2$ parameter value as a function of true momentum is shown in figure \ref{retune_highland_fig1}.
 
 
  % was used to compute the RMS scattering angles along these tracks, using the true momentum of the muon at the start of each segment. The $13.6$ constant in this equation was varied such that a histogram of angular scatters divided by $\sigma_o$ was Gaussian with a width of unity\footnote{Note that Lynch and Dahl recommend fitting only the central portion (E.G. 98\%) of this distribution to mitigate the effect of large angle (non-Gaussian) scatters which are not well described by the Highland formula, but in this analysis the entire distribution is fit as the entire distribution is what is used in the algorithm itself. Fitting to the central 98\% was found to have little effect on the result of this analysis.}. To explore the potential $\beta$ dependence, this fitting was done in bins of true segment momentum. .\\
@@ -390,7 +390,7 @@ Each of these steps is discussed in detail in the following subsections.\\
 % The input to the track segmentation routine is a vector of ordered three-dimensional trajectory points (x,y,z) representing the reconstructed track. The points are ordered along the direction of the track, with the first point representing the start of the track, and the last point representing the end of the track. These trajectory points can be determined in a number of ways by different track reconstruction algorithms. In the case of this analysis, the track reconstruction algorithm is named ``pandoraNuPMA" which constructs these three-dimensional trajectory points by combining two-dimensional hits reconstructed from signals on the different wire planes along with timing information from the photomultiplier tubes to reconstruct the third dimension\cite{Marshall:2015rfa}. Note that the tracking resolution in the y- (vertical) and z- (beam) directions are determined by the wire plane spacings, while the resolution in the x- (drift) direction is determined by optical signal timing and is therefore the x- direction resolution is better than that of the y- and z- directions.\\
 
 % Also input to the track segmentation routine is the desired segment length, which is a tunable parameter. In this note, segment lengths are always taken to be 10 cm (based on the findings of Appendix \ref{SegmentLength_MCBNBRecoTrack_section}) except where otherwise explicitly stated. 
-Track segmentation refers to the subdivision of three-dimensional reconstructed trajectory points of a reconstructed track into portions of definite length. In this analysis, the tracks are automatically reconstructed by a projection matching algorithm \cite{Antonello:2012hu} run on the output of MicroBooNE's Pandora-based neutrino event reconstruction chain \cite{Marshall:2015rfa}. The algorithm constructs the three-dimensional trajectory points by combining two-dimensional hits reconstructed from signals on the different wire planes along with timing information from the photomultiplier tubes. The segmentation process begins at the start of the track, and iterates through the trajectory points in order, defining segment start and stop points based on the straight-line distance between them. There is no overlap between segments. Given the subset of the three-dimensional trajectory points that corresponds to one segment of the track, a three-dimensional linear fit is applied to the data points, weighting all trajectory points equally in the fit. In this analysis, a segment length of 14 cm is used, which is a tunable parameter that has been chosen as described in the derivation of $\kappa(p)$ (equation \ref{kappa_equation}). \textcolor{red}{While optimal segment length may vary as a function of particle momentum, static segment lengths are used in this analysis as is required by the specific retuning of the Highland formula described in section \ref{highland_tuning_section}.}\\
+Track segmentation refers to the subdivision of three-dimensional reconstructed trajectory points of a reconstructed track into portions of definite length. In this analysis, the tracks are automatically reconstructed by a projection matching algorithm \cite{Antonello:2012hu} run on the output of MicroBooNE's Pandora-based neutrino event reconstruction chain \cite{Marshall:2015rfa}. The algorithm constructs the three-dimensional trajectory points by combining two-dimensional hits reconstructed from signals on the different wire planes along with timing information from the photomultiplier tubes. The segmentation process begins at the start of the track, and iterates through the trajectory points in order, defining segment start and stop points based on the straight-line distance between them. There is no overlap between segments. Given the subset of the three-dimensional trajectory points that corresponds to one segment of the track, a three-dimensional linear fit is applied to the data points, weighting all trajectory points equally in the fit. In this analysis, a segment length of 14 cm is used, which is a tunable parameter that has been chosen as described in the derivation of $\kappa(p)$ (equation \ref{kappa_equation}). While the optimal segment length may vary as a function of particle momentum, static segment lengths are used in this analysis as is required by the specific retuning of the Highland formula described in section \ref{highland_tuning_section}.\\
 
 With the segments defined, the scattering angles between the linear fits from adjacent segments are computed. A coordinate transformation is performed such that the $z'$ direction is oriented along the direction of the linear fit to the first of the segment pair. The $x'$ and $y'$ coordinates are chosen such that all of $x'$, $y'$, and $z'$ are mutually orthogonal and right-handed, as shown in figure \ref{mcs_nocap_fig}. The scattering angles with respect to the $x'$ direction and the $y'$ direction are computed as input to the MCS algorithm. Only the scattering angle with respect to the $x'$ direction is drawn in figure \ref{mcs_nocap_fig}.
 
@@ -458,7 +458,7 @@ E_{j} = E_t - \Delta E_{j},
 \noindent where $\Delta E_{j}$ is the energy loss upstream of this segment, computed by integrating the muon stopping power curve given by the Bethe-Bloch equation described by the Particle Data Group (PDG) \cite{stoppingpowersource} along the length of track upstream of this segment. Equation \ref{segment_E_equation} introduces a minimum allowable track energy determined by the range of the track, as $E_{j}$ must remain positive. The use of the Bethe-Bloch equation to determine $\Delta E_{j}$ impacts the MCS algorithm resolution for fully contained tracks, but does not for exiting tracks where much of the ionization energy loss is not visible. This value of segment energy, $E_{j}$, is converted to a momentum $p$ with the relativistic energy-momentum relation assuming the muon mass, and is then used to predict the RMS angular scatter for that segment ($\sigma_o$) by way of equation \ref{modified_highland_eqtn_kappa}. 
 
 \section{Range-based energy validation from simulation}\label{Range_Energy_Validation_section}
-In order to quantify the performance of the MCS energy estimation method on fully contained muons in data, an independent determination of energy is needed. Range-based energy, $E_{\text{range}}$ is used here because the true energy $E_{\text{true}}$ will not be known in analyzing detector data. The stopping power of muons in liquid argon is well described by the continuous slowing-down approximation (CSDA) by the Particle Data Group, and agrees with data at the sub-percent level \cite{MIPenergysource,PDG_spline_table,NISTdata}. By using a linear interpolation between points in the stopping power table of ref. \cite{PDG_spline_table}, the length of a track can be used to reconstruct the muon's total energy with good accuracy. A simulated sample of fully contained BNB neutrino-induced muons longer than one meter is used to quantify the bias and resolution for the range-based energy estimation technique. The range is defined as the straight-line distance between the true starting point and true stopping point of a muon, even though the trajectories are not perfectly straight lines. The bias and resolution are computed in bins of true total energy of the muons by \textcolor{red}{doing a least-squares minimization Gaussian function fit} to a distribution of the fractional energy difference $(E_{\text{Range}}-E_{\text{True}})/(E_{\text{True}})$ in each bin. The mean of each Gaussian yields the bias for that true energy bin, and the width indicates the resolution. \textcolor{red}{The mean and standard deviation of the raw data agrees with the mean and width (respectively) of the Gaussian fits for these fully contained muons.} Figure \ref{true_range_bias_resolution_MCTrack_fig} shows the bias and resolution for the range-based energy reconstruction method. The bias is less than 1\% and the resolution for this method of energy reconstruction increases slightly with true muon energy but remains on the order of (2-4)\%. This result demonstrates that range-based energy (and therefore range-based momentum) is a good estimator of the true energy (momentum) of a reconstructed contained muon track in data, assuming that the track is well reconstructed in terms of length.
+In order to quantify the performance of the MCS energy estimation method on fully contained muons in data, an independent determination of energy is needed. Range-based energy, $E_{\text{range}}$ is used here because the true energy $E_{\text{true}}$ will not be known in analyzing detector data. The stopping power of muons in liquid argon is well described by the continuous slowing-down approximation (CSDA) by the Particle Data Group, and agrees with data at the sub-percent level \cite{MIPenergysource,PDG_spline_table,NISTdata}. By using a linear interpolation between points in the stopping power table of ref. \cite{PDG_spline_table}, the length of a track can be used to reconstruct the muon's total energy with good accuracy. A simulated sample of fully contained BNB neutrino-induced muons longer than one meter is used to quantify the bias and resolution for the range-based energy estimation technique. The range is defined as the straight-line distance between the true starting point and true stopping point of a muon, even though the trajectories are not perfectly straight lines. The bias and resolution are computed in bins of true total energy of the muons by performing a least-squares minimization Gaussian function fit to a distribution of the fractional energy difference $(E_{\text{Range}}-E_{\text{True}})/(E_{\text{True}})$ in each bin. The mean of each Gaussian yields the bias for that true energy bin, and the width indicates the resolution. The mean and standard deviation of the raw data agrees with the mean and width (respectively) of the Gaussian fits for these fully contained muons. Figure \ref{true_range_bias_resolution_MCTrack_fig} shows the bias and resolution for the range-based energy reconstruction method. The bias is less than 1\% and the resolution for this method of energy reconstruction increases slightly with true muon energy but remains on the order of (2-4)\%. This result demonstrates that range-based energy (and therefore range-based momentum) is a good estimator of the true energy (momentum) of a reconstructed contained muon track in data, assuming that the track is well reconstructed in terms of length.
 
 \begin{figure}
 \centering
@@ -565,7 +565,7 @@ In this section we quantify the MCS algorithm performance on a sample of well re
 \caption{MCS-computed momentum versus true momentum for the sample of simulated exiting muons from BNB $\nu_\mu$CC interactions in MicroBooNE with at least one meter of track contained within the TPC. The color (z) scale indicates number of tracks.}\label{MCS_true_comparison_exiting_fig}
 \end{figure}
 
-The distribution of $(p_{\text{MCS}}^{-1} - p_{\text{true}}^{-1})/(p_{\text{true}}^{-1})$ is shown for four representative bins of true momentum in figure \ref{MCS_true_exiting_resolution_MCBNBRecoTrackExiting_slices_fig}, along with the Gaussian fit to each distribution. Low-momentum tails where the MCS momentum is underestimated due to poor track reconstruction lie outside the fitted Gaussian function. \textcolor{red}{The mean and width of the Gaussian fits are again used to compute the fractional bias and resolution (respectively), while the mean and standard deviation of the raw data are also reported in the figure.}\\
+The distribution of $(p_{\text{MCS}}^{-1} - p_{\text{true}}^{-1})/(p_{\text{true}}^{-1})$ is shown for four representative bins of true momentum in figure \ref{MCS_true_exiting_resolution_MCBNBRecoTrackExiting_slices_fig}, along with the Gaussian fit to each distribution. Low-momentum tails where the MCS momentum is underestimated due to poor track reconstruction lie outside the fitted Gaussian function. The mean and width of the Gaussian fits are again used to compute the fractional bias and resolution (respectively), while the mean and standard deviation of the raw data are also reported in the figure.\\
 
 The fractional bias and resolution as a function of true momentum are shown in figure \ref{exitingRecoTrack_bias_resolution_fig_alllengths}. The bias is below 4\% for all momenta, and the resolution is $\approx$ 14\% in the relevant momentum region for muon from the BNB $\nu_\mu$CC interactions (below 2 GeV/c muon momentum). The resolution worsens for muon momenta above this region because the angular scatters begin to be comparable with the detector resolution term of 3 mrad. The resolution improves for longer lengths of track contained, with 10\% resolution for muons with $p<2$~$\text{GeV/c}$ with more than 3.5 meters contained. The mean length of track contained for muons in this analysis is 212 cm.\\
 
@@ -580,7 +580,7 @@ The fractional bias and resolution as a function of true momentum are shown in f
 	{Figures/{MCS_true_exiting_resolution_MCBNBRecoTrackExiting_slice_2.78_3.19}.png}
 \includegraphics[width=0.45\textwidth]
 	{Figures/{MCS_true_exiting_resolution_MCBNBRecoTrackExiting_slice_3.59_4.00}.png}
-\caption{\textcolor{red}{INTERAL NOTE TO COLLABORATORS [the following text will not be included in the submitted paper draft]: This figure has changed. Raw std and mean are drawn on plots now. Note the raw std and mean are much worse than the results from the Gaussian fit. This is because we cut out tails which skew the std and mean significantly when computing the bias and resolution via Gaussian fits.} Fractional momentum difference for a few representative bins of true momentum for a sample of simulated exiting muon tracks. The y-axis is number of tracks, and the x-axis is $(p_{\text{MCS}}^{-1} - p_{\text{true}}^{-1})/(p_{\text{true}}^{-1})$.}
+\caption{Fractional momentum difference for a few representative bins of true momentum for a sample of simulated exiting muon tracks. The y-axis is number of tracks, and the x-axis is $(p_{\text{MCS}}^{-1} - p_{\text{true}}^{-1})/(p_{\text{true}}^{-1})$.}
 \label{MCS_true_exiting_resolution_MCBNBRecoTrackExiting_slices_fig}
 \end{figure}
 
